Changes from jTDS 0.8.1
=========================

07/19/2004 - Brian Heineman
 o Applied patch in bug [992971] Decimal testcase fails with sql7 (Thanks to
   Mike Hutchinson for the patch)
 o Corrected bug introduced in Clob optimization.
 o Added test for bug [992715] wasnull() always returns false
 o Added test for bug [991640] java.sql.Date error and RAISERROR problem

07/17/2004 - Brian Heineman
 o Applied patch in bug [992971], which corrects bug [992976] Zero length
   string error on Sybase and MSQL 6.5 (Thanks to Mike Hutchinson for the
   patch); made a minor change to reduce memory allocation.

07/15/2004 - Brian Heineman
 o Refactored JtdsDataSource implementation into AbstractDataSource,
   JtdsDataSource and JtdsConnectionPoolDataSource.
 o Updated FAQ documentation to reflect current driver and data source class
   names.
 o Added test for bug [930305] getGeneratedKeys() does not work with triggers
 o Added test for bug [974801] stored procedure error in Northwind

07/14/2004 - Brian Heineman
 o Updated ResultSetMetaData.getColumnType(int) always return Types.BIT for BIT
   columns. Updated tests to ensure this functionality continues to work in the
   future.
   http://sourceforge.net/forum/forum.php?thread_id=1108433&forum_id=129584
 o Corrected bug [991033] Data type 0x32 is unknown error with SQL Server 2005;
   SYBBITN values are now properly formed and are no longer sent as SYBBIT
   when they are not null.
 o Corrected bug [991088] Data type 0x3E is unknown error with SQL Server 2005;
   SYBFLTN values are now properly formed and are no longer sent as SYBFLT8
   when they are not null.
 o Updated documentation to reflect SQL Server 2005 compliance.

07/13/2004 - Brian Heineman
 o Corrected bug [989963] BigInt becomes Numeric;
   ResultSetMetaData.getColumnType(int) now returns Types.BIGINT. Added tests
   to ensure this functionality continues to work in the future.
 o Added test for bug [989399] bug? blob.getBytes() from 0